--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
   "bugs": {
     "url": "https://github.com/EmilS2019/MusicWebsite/issues"
   },
-  "homepage": "https://github.com/EmilS2019/MusicWebsite#readme"
+  "homepage": "https://github.com/EmilS2019/MusicWebsite#readme",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "mongoose": "^5.7.1"
+  }
 }
