--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.7.1"
+  },
+  "devDependencies": {
+    "concurrently": "^4.1.2",
+    "nodemon": "^1.19.2"
   }
 }
