--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"dev": "concurrently \"npm\""
+		"dev": "concurrently \"cd frontend && npm start\" \"nodemon server\""
 	},
 	"repository": {
 		"type": "git",
