--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 	"main": "index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"dev": "concurrently \"cd frontend && npm start\" \"nodemon server\""
+		"dev": "concurrently \"cd frontend && npm start\" \"nodemon server\"",
+		"heroku-postbuild": "cd client && npm install && npm run build"
 	},
 	"repository": {
 		"type": "git",
