--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"main": "index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
+		"start": "node server.js",
 		"dev": "concurrently \"cd frontend && npm start\" \"nodemon server\"",
 		"heroku-postbuild": "cd client && npm install && npm run build"
 	},
