--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,10 @@
 		"react": "^16.10.0",
 		"react-dom": "^16.10.0",
 		"react-router-dom": "^5.1.1",
-		"react-scripts": "3.1.2"
+		"react-scripts": "3.1.2",
+		"react-fontawesome": "^1.6.1",
+		"@fortawesome/fontawesome-svg-core": "^1.2.25",
+		"@fortawesome/free-solid-svg-icons": "^5.11.2"
 	},
 	"scripts": {
 		"start": "react-scripts start",
