--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,14 +3,15 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"@fortawesome/fontawesome-svg-core": "^1.2.25",
+		"@fortawesome/free-solid-svg-icons": "^5.11.2",
 		"axios": "^0.19.0",
 		"react": "^16.10.0",
 		"react-dom": "^16.10.0",
+		"react-fontawesome": "^1.6.1",
 		"react-router-dom": "^5.1.1",
 		"react-scripts": "3.1.2",
-		"react-fontawesome": "^1.6.1",
-		"@fortawesome/fontawesome-svg-core": "^1.2.25",
-		"@fortawesome/free-solid-svg-icons": "^5.11.2"
+		"styled-components": "^4.4.0"
 	},
 	"scripts": {
 		"start": "react-scripts start",
